# companion-pns

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
db/migrations/: 1_users.sql  2_user_roles.sql  3_api_tokens.sql  4_user_devices.sql  README.md
src/: config.rs  db.rs  main.rs  serialization.rs  ui.rs
src/api/: devices.rs  mod.rs  users.rs
src/security/: api_token.rs  mod.rs  user_auth_token.rs
ui/static/: dashboard.css
ui/templates/: base.html  dashboard.html  header.html  home.html  login.html
ui/templates/dashboard-widgets/: admin.html  profile.html  tokens.html
